--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -16,7 +16,8 @@ const {title, img, href} = Astro.props;
 
 <style>
   li {
-		width: 300px;
+		width: 100%;
+		max-width: 400px;
 		border: 2px solid #f3f4f6;		
 		list-style: none;
 		margin: 1.2rem 0;
