--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,10 +1,10 @@
 ---
 export interface Props {
   title: string,
-  img?: string,
+  color?: string,
   href: string,
 }
-const {title, img, href} = Astro.props;
+const {title, color, href} = Astro.props;
 ---
 <li>
   <a href={href}>
@@ -22,12 +22,13 @@ const {title, img, href} = Astro.props;
 		list-style: none;
 		margin: 1.2rem 0;
 	}
+
 	a {
 		font-family: 'Montserrat', sans-serif;
 		text-decoration: none;
 		color: #f4f4f4;
-		
 	}
+	
 	h3 {
 		font-weight: 400;
 		font-size: 0.9rem;
