--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,10 +1,9 @@
 ---
 export interface Props {
   title: string,
-  color?: string,
   href: string,
 }
-const {title, color, href} = Astro.props;
+const {title, href} = Astro.props;
 ---
 <li>
   <a href={href}>
@@ -28,7 +27,7 @@ const {title, color, href} = Astro.props;
 		text-decoration: none;
 		color: #f4f4f4;
 	}
-	
+
 	h3 {
 		font-weight: 400;
 		font-size: 0.9rem;
