--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -15,6 +15,7 @@ const {title, href} = Astro.props;
 
 <style>
   li {
+		height: 2.5rem;
 		width: 100%;
 		max-width: 400px;
 		border: 2px solid #f3f4f6;		
@@ -23,12 +24,14 @@ const {title, href} = Astro.props;
 	}
 
 	a {
+		line-height: 2.5rem;
 		font-family: 'Montserrat', sans-serif;
 		text-decoration: none;
 		color: #f4f4f4;
 	}
 
 	h3 {
+		margin: 0;
 		font-weight: 300;
 		font-size: 0.9rem;
 	}
